Use lambda instead of full class